--- a/src/service-a/service-a-deployment.yaml
+++ b/src/service-a/service-a-deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - containerPort: 80
           livenessProbe:
             httpGet:
-              path: /health
+              path: /healthz
               port: 80
             initialDelaySeconds: 10
             periodSeconds: 10
