pushing assignment to github

--- a/src/service-a/Dockerfile
+++ b/src/service-a/Dockerfile
@@ -1,19 +1,23 @@
 FROM python:3.9-slim-buster as build
 
+# create a non-root user
+RUN useradd -m newuser
+
 # set the working directory in the container
 WORKDIR /app
 
-# copy the requirements file
-COPY requirements.txt .
+# copy files and adjust ownership
+COPY . /app
+RUN chown -R newuser:newuser /app
 
 # install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# copy the rest of the application's source code into the container
-COPY . .
-
 # expose the port that the service listens on
 EXPOSE 80
+
+# Switch to the non-root user
+USER newuser
 
 # run
 CMD ["python3", "-u", "bitcoin_service.py"]
