--- a/src/ingress/ingress.yaml
+++ b/src/ingress/ingress.yaml
@@ -2,9 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app-ingress
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: "nginx"
   rules:
     - host: 172.169.103.195.nip.io
       http:
