--- a/src/service-b/service-b-deployment.yaml
+++ b/src/service-b/service-b-deployment.yaml
@@ -35,10 +35,9 @@ kind: Service
 metadata:
   name: service-b
 spec:
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 80
-      nodePort: 30002
+  type: ClusterIP
   selector:
     app: service-b
+  ports:
+    - port: 80
+      targetPort: 8080
